Created assets forlder for styles and javascript. Populated some HTML dynamically with jS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,18 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- <div class="row">
+        <h3 class="col-2 time-block hour">
+          9am
+        </h3>
+        <textarea class="col-8 past">
+
+        </textarea>
+        <button class="col-2 saveBtn"> Save Task</button>
+      </div> -->
       
     </div>
-
+    <script src = "./assets/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
