--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     />
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -39,9 +48,8 @@
         </textarea>
         <button class="col-2 saveBtn"> Save Task</button>
       </div> -->
-      
     </div>
-    <script src = "./assets/script.js"></script>
+    <script src="./assets/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
